[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Actors/Lorik.gd" type="Script" id=1]
[ext_resource path="res://src/UI/indicator/exclamation.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Lorik.png" type="Texture" id=3]
[ext_resource path="res://src/UI/Dialogbox/Dialog.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 32, 26, 25 ]
}

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_idle"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "talking"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 34, 35, 34, 35, 37, 38, 39, 40, 36, 41 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34, 40.5 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "show_hint"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="OccluderPolygon2D" id=8]
closed = false
cull_mode = 1
polygon = PoolVector2Array( 32, 16, 29, 2, 25, -8, 11, -13, 1, -10, -5, -5, -11, -4, -17, 4, -30, 12, -30, 15 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 415.5 )

[node name="Lorik" type="Area2D"]
pause_mode = 2
collision_layer = 0
collision_mask = 3
monitorable = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/spawn = SubResource( 3 )
anims/talking = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.499999, -15 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialog" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.90735e-06, -14.5 )
scale = Vector2( 4.1, 3.45 )
process_parent = true
physics_process_parent = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = -34.0
margin_right = 24.0
margin_bottom = -18.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer"]
anims/RESET = SubResource( 6 )
anims/show_hint = SubResource( 7 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 8 )

[node name="despawn" type="Area2D" parent="."]
position = Vector2( 446, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="despawn"]
shape = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_Lorik_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lorik_body_exited"]
[connection signal="text_finished" from="CanvasLayer/Dialog" to="." method="_on_Dialog_text_finished"]
[connection signal="body_entered" from="despawn" to="." method="_on_despawn_body_entered"]
